--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,69 @@ target/
 profile_default/
 ipython_config.py
 
+# Environment & Local Config
+.env
+.env.*
+!.env.example
+*.local
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+venv3am/
+ENV/
+
+# IDE - VSCode
+.vscode/
+*.code-workspace
+.history/
+
+# IDE - PyCharm/IntelliJ
+.idea/
+*.iml
+*.iws
+.idea_modules/
+
+# Database
+*.db
+*.sqlite3
+*.sqlite
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Testing
+.coverage
+coverage/
+.pytest_cache/
+htmlcov/
+
+# Alembic
+alembic/versions/*
+!alembic/versions/.gitkeep
+
+# Vercel
+.vercel
+.now
+
+# System files
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+
+# Temporary files
+tmp/
+temp/
+.tmp/
+
 # pyenv
 #   For a library or package, you might want to ignore these files since the code is
 #   intended to run in multiple environments; otherwise, check them in:
@@ -169,3 +232,6 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# alembic
+alembic/versions/
